<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string-array name="hangmanVocabulary">
        <item>test</item>
        <item>word</item>
        <item>coffee</item>
        <item>water</item>
        <item>drink</item>
    </string-array>
</resources>
