<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TicTacToeActivity">

    <TextView
        android:id="@+id/ttt_tv_game_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:text="@string/GameModePvP"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ttt_tv_game_mode" />

    <TableLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:background="@color/colorTTTGridBG"
        android:stretchColumns="*"
        app:layout_constraintBottom_toTopOf="@+id/btn_play_again"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvStatus">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_field_0_0"
                android:tag="@string/player_none"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/colorTTTGridFieldBG" />

            <Button
                android:id="@+id/btn_field_0_1"
                android:tag="@string/player_none"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/colorTTTGridFieldBG" />

            <Button
                android:id="@+id/btn_field_0_2"
                android:tag="@string/player_none"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/colorTTTGridFieldBG" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_field_1_0"
                android:tag="@string/player_none"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/colorTTTGridFieldBG" />

            <Button
                android:id="@+id/btn_field_1_1"
                android:tag="@string/player_none"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/colorTTTGridFieldBG" />

            <Button
                android:id="@+id/btn_field_1_2"
                android:tag="@string/player_none"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/colorTTTGridFieldBG" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_field_2_0"
                android:tag="@string/player_none"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/colorTTTGridFieldBG" />

            <Button
                android:id="@+id/btn_field_2_1"
                android:tag="@string/player_none"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/colorTTTGridFieldBG" />

            <Button
                android:id="@+id/btn_field_2_2"
                android:tag="@string/player_none"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/colorTTTGridFieldBG" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/btn_play_again"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/play_again"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>