...

    <string name="TTT_Transfer_Settings" translatable="false">ttt_settings_transfer</string>

    <string name="player_one">Player 1</string>
    <string name="player_two">Player 2</string>

    <string name="player_cross">Player Cross</string>
    <string name="player_circle">Player Circle</string>
    <string name="player_none" translatable="false">Player None</string>

    <string name="GameMode_TicTacToe" translatable="false">Tic Tac Toe</string>
    <string name="GameMode">Game Mode</string>
    <string name="GameModePvP" translatable="false">PvP</string>
    <string name="GameModePvAI" translatable="false">PvAI</string>
...
